--- a/home.html
+++ b/home.html
@@ -46,26 +46,26 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
-
+    </div>   
     
   <div class='about-me'>
     <h3>About Me</h3>
     <p>I enjoy traveling and drinking coffee.</p>
-  <br>
-  <h3>Traveling</h3>
-  <h5 style="color:darkcyan">Countries I have traveled to include:</h5>
-  <ul>
+    <br>
+    <h3>Traveling</h3>
+    <h5>Countries I have traveled to include:</h5>
+    <ul>
         <li>Taiwan</li>
         <li>South Korea</li>
         <li>Australia</li>
         <li>Japan</li>
-  </ul>
+    </ul>
 
-  <h3>Coffee</h3>
-  <ul>
-    <li>Kopi-C</li>
-  </ul>
-
+    <h3>Coffee</h3>
+    <ul>
+        <li>Kopi C</li>
+        <li>Yuan Yang</li>
+    </ul>
   </div>
 
 
