--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
     <p>I enjoy traveling and drinking coffee.</p>
     <br>
     <h3>Traveling</h3>
-    <h5>Countries I have traveled to include:</h5>
+    <p>Countries I have traveled to include:</p>
     <ul>
         <li>Taiwan</li>
         <li>South Korea</li>
