--- a/home.html
+++ b/home.html
@@ -69,7 +69,10 @@
   </div>
 
 
-    
+  <footer>
+    <p>&#128190; Chevonne. 2024.</p>
+  </footer>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
