--- a/home.html
+++ b/home.html
@@ -22,9 +22,6 @@
 </head>
 
 <body>
-    <div id="header">
-                <h5>Be yourself; everyone else is already taken. - Oscar Wilde</h5>
-    </div>
     
     <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -47,6 +44,9 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>   
+    <div class="fixed">
+        <h5>Be yourself; everyone else is already taken. - Oscar Wilde</h5>
+    </div>
     
   <div class='about-me'>
     <h3>About Me</h3>
